# rust-stun-practice

./: Cargo.toml  README.md
examples/: client.rs  server.rs
src/: attribute.rs  client.rs  error.rs  error_code.rs  integrity.rs  lib.rs  main.rs  message.rs  xor_addr.rs
