[package]
name = "stun"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.3.0"
url = "2.2.0"
anyhow = "1.0.41"
rand = "0.8.0"

[[example]]
name = "server"
path = "examples/server.rs"
